--- a/renderer/index.html
+++ b/renderer/index.html
@@ -4,30 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!</title>
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
   <link rel="stylesheet" href="style.css">
+  <script src="index.js"></script>
 </head>
 
 <body>
-  <h1>Hello World!</h1>
-  <!-- All of the Node.js APIs are available in this renderer process. -->
-  We are using Node.js <script>
-    document.write(process.versions.node)
-
-  </script>,
-  Chromium <script>
-    document.write(process.versions.chrome)
-
-  </script>,
-  and Electron <script>
-    document.write(process.versions.electron)
-
-  </script>.
-
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-
-  </script>
+  <div class="container">
+    <div class="columns">
+      <div class="column col-10">
+        <h1 class="text-center">Todos</h1>
+        <button id="createTodoBtn" class="btn">Create New Todo</button>
+        <ul class="todoList"></ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
